...
  final Function(PatientEvaluationGraphData) patientEvalFunction;

  GraphLine(this.color, this.label, this.patientEvalFunction);
}

// Keys
Key dateRangeKey = const Key('patientInfoPageGraphTabDateRangePickerKey');
Key checkboxKey = const Key('patientInfoGraphTabCheckboxKey');

class PatientInfoGraphTab extends StatefulWidget {
  final List<PatientEvaluationGraphData> patientEvaluationGraphDataList;

  const PatientInfoGraphTab(
...

  // For displaying multiple lines on the graph
  var graphLines = <CartesianSeries>[];
  late Widget postureSelectButton;

  List<String> postures = [
    'Head Lat',
    'Head Ant',
    'Elbow Extension',
    'Hip Flex',
    'Knee Flex',
    'Lumbar',
    'Pelvic',
    'Pelvic Tilt',
    'Thoracic',
    'Trunk',
    'Trunk Inclination',
  ];
  late List<ChoiceData<String>> posturesData;

  List<ChoiceData<String>> multipleSelectedPostures = [];
...
        title: posture,
      );
    }).toList();

    setupPosturesButton();

    foundEvaluationStatusMessage = 'Found 0 evaluations';
    filteredGraphData = [];

    // Enable toggle averages button
    switchState = true;

    // disable date range if no evaluations
...
          final dynamic Function(DateRange?) onDateRangeChanged,
          [final bool doubleMonth = true]) =>
      DateRangePickerWidget(
        doubleMonth: doubleMonth,
        quickDateRanges: [
          QuickDateRange(
            label: 'All Evaluations',
            dateRange: initialDateRange,
          ),
          QuickDateRange(
            label: '30 days before last session',
            dateRange: DateRange(
              initialDateRange.end.subtract(const Duration(days: 30)),
              initialDateRange.end,
            ),
          ),
          QuickDateRange(
            label: '90 days before last session',
            dateRange: DateRange(
              initialDateRange.end.subtract(const Duration(days: 90)),
              initialDateRange.end,
            ),
          ),
          QuickDateRange(
            label: 'Last year before last session',
            dateRange: DateRange(
              initialDateRange.end.subtract(const Duration(days: 365)),
              initialDateRange.end,
            ),
          ),
        ],
...
        future: null,
        builder: (final context, final snapshot) {
          return SizedBox(
            width: 300,
            child: Card(
              child: PromptedChoice<ChoiceData<String>>.multiple(
                title: 'Select Postures',
                clearable: true,
                error: snapshot.hasError,
                errorBuilder: ChoiceListError.create(
                  message: snapshot.error.toString(),
                ),
                loading: snapshot.connectionState == ConnectionState.waiting,
...
                modalHeaderBuilder: ChoiceModal.createHeader(
                  title: const Text('Select Postures'),
                  actionsBuilder: [
                    (final state) {
                      final values = snapshot.data!;
                      return Checkbox(
                        semanticLabel: 'Select/Deselect All',
                        value: state.selectedMany(values),
                        onChanged: state.onSelectedMany(values),
                        tristate: true,
                      );
                    },
                    ChoiceModal.createSpacer(width: 25),
...
